Stable version, morse work. Need to finish load more and maybe search by artist

--- a/MVVM_FindSong/DetailViewController.xib
+++ b/MVVM_FindSong/DetailViewController.xib
@@ -7,12 +7,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="MVVM_FindSong" customModuleProvider="target">
             <connections>
-                <outlet property="albumLbl" destination="78L-qQ-D9Z" id="HmN-mW-d2F"/>
+                <outlet property="activityIndicator" destination="QOH-UB-jgP" id="him-95-bCS"/>
+                <outlet property="albumBtn" destination="fA2-33-x1u" id="T3f-ve-uCu"/>
+                <outlet property="artistBtn" destination="LWC-B1-PBN" id="aFf-sN-BHA"/>
                 <outlet property="playBtn" destination="zic-sK-a0G" id="xCh-5a-Msg"/>
                 <outlet property="playMorseBtn" destination="C0T-zQ-ZGG" id="5id-BG-x4R"/>
                 <outlet property="priceLbl" destination="nkF-mW-vFp" id="BiD-P6-hzp"/>
                 <outlet property="songLength" destination="X0v-pT-AGr" id="inX-cp-Y19"/>
-                <outlet property="titleLbl" destination="EwJ-vK-Nup" id="lq4-bA-zEJ"/>
                 <outlet property="view" destination="iN0-l3-epB" id="MkO-20-kKI"/>
             </connections>
         </placeholder>
@@ -21,24 +22,6 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Louis Armstrong - Cover" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EwJ-vK-Nup">
-                    <rect key="frame" x="8" y="245" width="584" height="35"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="35" id="i7i-0b-KHV"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Album 3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="78L-qQ-D9Z">
-                    <rect key="frame" x="8" y="288" width="584" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="L4u-RN-OWA"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zic-sK-a0G">
                     <rect key="frame" x="200" y="8" width="200" height="200"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -49,6 +32,11 @@
                     <state key="normal" image="defaultCover200.png">
                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="playTapped:" destination="-1" eventType="touchUpInside" id="mvc-bx-sGf"/>
                     </connections>
@@ -57,7 +45,7 @@
                     <rect key="frame" x="200" y="216" width="200" height="21"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3:20" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X0v-pT-AGr">
-                            <rect key="frame" x="150" y="0.0" width="50" height="21"/>
+                            <rect key="frame" x="145" y="0.0" width="50" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="50" id="INk-lP-BXI"/>
                                 <constraint firstAttribute="height" constant="21" id="iaX-8a-Dcn"/>
@@ -67,7 +55,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.99 $" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkF-mW-vFp">
-                            <rect key="frame" x="0.0" y="0.0" width="50" height="21"/>
+                            <rect key="frame" x="5" y="0.0" width="50" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="50" id="F3N-SD-K5r"/>
                                 <constraint firstAttribute="height" constant="21" id="TZN-xd-2cV"/>
@@ -77,17 +65,22 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.72766272190000003" green="0.78830128209999994" blue="0.66702416170000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="nkF-mW-vFp" firstAttribute="top" secondItem="A9r-Ib-pTp" secondAttribute="top" id="Bb3-cl-kgo"/>
+                        <constraint firstAttribute="trailing" secondItem="X0v-pT-AGr" secondAttribute="trailing" constant="5" id="Na7-aV-tqi"/>
                         <constraint firstAttribute="bottom" secondItem="X0v-pT-AGr" secondAttribute="bottom" id="Ppr-pw-E9f"/>
                         <constraint firstAttribute="height" constant="21" id="VUp-06-ck7"/>
-                        <constraint firstAttribute="trailing" secondItem="X0v-pT-AGr" secondAttribute="trailing" id="cB5-cg-oST"/>
-                        <constraint firstItem="nkF-mW-vFp" firstAttribute="leading" secondItem="A9r-Ib-pTp" secondAttribute="leading" id="iSr-H6-81K"/>
+                        <constraint firstItem="nkF-mW-vFp" firstAttribute="leading" secondItem="A9r-Ib-pTp" secondAttribute="leading" constant="5" id="iSr-H6-81K"/>
                         <constraint firstAttribute="width" constant="200" id="kzB-sz-4TC"/>
                         <constraint firstAttribute="bottom" secondItem="nkF-mW-vFp" secondAttribute="bottom" id="uG5-4Z-bk8"/>
                         <constraint firstItem="X0v-pT-AGr" firstAttribute="top" secondItem="A9r-Ib-pTp" secondAttribute="top" id="zf1-wV-Xrv"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="3"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C0T-zQ-ZGG">
                     <rect key="frame" x="200" y="542" width="200" height="50"/>
@@ -109,23 +102,73 @@
                         <action selector="playMorse:" destination="-1" eventType="touchUpInside" id="CL8-JF-zbf"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LWC-B1-PBN">
+                    <rect key="frame" x="0.0" y="245" width="600" height="45"/>
+                    <color key="backgroundColor" red="0.72766272189349113" green="0.78830128205128203" blue="0.66702416173570012" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="8Gy-eI-JAs"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
+                    <state key="normal" title="Artist Name">
+                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="artistTapped:" destination="-1" eventType="touchUpInside" id="FrP-s8-BNZ"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fA2-33-x1u">
+                    <rect key="frame" x="0.0" y="298" width="600" height="40"/>
+                    <color key="backgroundColor" red="0.72766272190000003" green="0.78830128209999994" blue="0.66702416170000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="a7R-Lk-XSc"/>
+                    </constraints>
+                    <state key="normal" title="Album Name">
+                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="albumTapped:" destination="-1" eventType="touchUpInside" id="kuL-FZ-CeI"/>
+                    </connections>
+                </button>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="QOH-UB-jgP">
+                    <rect key="frame" x="-10" y="-10" width="20" height="20"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="0.95749056177680558" green="0.98509080497382195" blue="0.90736134661930834" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="QOH-UB-jgP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="98" id="32j-Kc-eF6"/>
+                <constraint firstItem="fA2-33-x1u" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="3L6-NX-1OP"/>
                 <constraint firstItem="A9r-Ib-pTp" firstAttribute="top" secondItem="zic-sK-a0G" secondAttribute="bottom" constant="8" id="3U9-pw-frY"/>
-                <constraint firstItem="78L-qQ-D9Z" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="BD8-se-pdK"/>
-                <constraint firstAttribute="trailing" secondItem="78L-qQ-D9Z" secondAttribute="trailing" constant="8" id="S0u-F5-FFe"/>
-                <constraint firstAttribute="trailing" secondItem="EwJ-vK-Nup" secondAttribute="trailing" constant="8" id="UVK-cU-H4Y"/>
-                <constraint firstItem="78L-qQ-D9Z" firstAttribute="top" secondItem="EwJ-vK-Nup" secondAttribute="bottom" constant="8" id="Z8H-Vi-QN4"/>
+                <constraint firstItem="LWC-B1-PBN" firstAttribute="top" secondItem="A9r-Ib-pTp" secondAttribute="bottom" constant="8" id="4kS-6H-Pqs"/>
+                <constraint firstAttribute="trailing" secondItem="fA2-33-x1u" secondAttribute="trailing" id="EHC-bd-GcP"/>
+                <constraint firstItem="fA2-33-x1u" firstAttribute="top" secondItem="LWC-B1-PBN" secondAttribute="bottom" constant="8" id="Tfa-1k-2am"/>
+                <constraint firstAttribute="trailing" secondItem="LWC-B1-PBN" secondAttribute="trailing" id="Unf-eE-ywR"/>
+                <constraint firstItem="QOH-UB-jgP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="VOG-pL-gLK"/>
                 <constraint firstItem="A9r-Ib-pTp" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="an3-Og-oTY"/>
                 <constraint firstItem="zic-sK-a0G" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="cyx-dp-TtP"/>
                 <constraint firstItem="zic-sK-a0G" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="gV5-fj-nHQ"/>
                 <constraint firstAttribute="bottom" secondItem="C0T-zQ-ZGG" secondAttribute="bottom" constant="8" id="kBl-WH-vUR"/>
                 <constraint firstItem="C0T-zQ-ZGG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="obv-dh-4NM"/>
-                <constraint firstItem="EwJ-vK-Nup" firstAttribute="top" secondItem="A9r-Ib-pTp" secondAttribute="bottom" constant="8" id="s1L-hU-3Un"/>
-                <constraint firstItem="EwJ-vK-Nup" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="y9n-ql-FGX"/>
+                <constraint firstItem="LWC-B1-PBN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wZS-YG-4PH"/>
             </constraints>
-            <point key="canvasLocation" x="956" y="372"/>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="QOH-UB-jgP"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="32j-Kc-eF6"/>
+                    <exclude reference="VOG-pL-gLK"/>
+                </mask>
+            </variation>
+            <variation key="widthClass=compact">
+                <mask key="subviews">
+                    <include reference="QOH-UB-jgP"/>
+                </mask>
+                <mask key="constraints">
+                    <include reference="32j-Kc-eF6"/>
+                    <include reference="VOG-pL-gLK"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="1492" y="401"/>
         </view>
     </objects>
     <resources>
