Link under album & artist work

--- a/MVVM_FindSong/SongCell.xib
+++ b/MVVM_FindSong/SongCell.xib
@@ -18,13 +18,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="BMTH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCc-6r-4be">
-                    <rect key="frame" x="76" y="44" width="204" height="19"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ju-Bx-IiI">
-                    <rect key="frame" x="288" y="48" width="24" height="15"/>
+                    <rect key="frame" x="76" y="44" width="193" height="19"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -43,8 +37,17 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ju-Bx-IiI">
+                    <rect key="frame" x="277" y="48" width="35" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="35" id="oQS-Pd-jsV"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.95749056180000003" green="0.98509080500000001" blue="0.90736134660000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="PRx-Xe-mKe" firstAttribute="leading" secondItem="W1r-wy-uAw" secondAttribute="trailing" constant="8" id="2rn-At-y0q"/>
                 <constraint firstAttribute="bottom" secondItem="TCc-6r-4be" secondAttribute="bottom" constant="12" id="5UX-xI-WUX"/>
